build + fix nav-pills z-index"

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -101,7 +101,7 @@ canvas {
 #nav-pills {
     display: flex;
     align-items: center;
-    z-index: 2;
+    z-index: 5;
     justify-content: flex-end;
 }
 
